[package]
name = "dissolve"
version = "0.2.2"
description = "Melt away HTML tags and retrieve the text contents that you care about!"
repository = "https://github.com/KiChjang/dissolve"
keywords = ["html", "tags", "strip", "trim", "parse"]
license = "MIT"
authors = ["Keith Yeung <kungfukeith11@gmail.com>"]

[dependencies]
html5ever = "~0.21.0"
tendril = "~0.4.0"
