[package]
name = "dissolve"
version = "0.2.2"
description = "Melt away HTML tags and retrieve the text contents that you care about!"
repository = "https://github.com/KiChjang/dissolve"
keywords = ["html", "tags", "strip", "trim", "parse"]
license = "MIT"
authors = ["Keith Yeung <kungfukeith11@gmail.com>"]
edition = "2021"

[dependencies]
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
